# v2m

./: LICENSE  README.md
.github/workflows/: ci.yml
v2m/: Cargo.toml
v2m/cli/: Cargo.toml
v2m/cli/src/: dot.rs  eval.rs  lib.rs  lint.rs  main.rs  stats.rs
v2m/cli/tests/: nir_eval.rs
v2m/cli/tests/data/nir/: bad.nir.json  fa1.expected.json  fa1.inputs.json
v2m/core/formats/: Cargo.toml
v2m/core/formats/src/: constraints.rs  lib.rs  nir.rs  pir.rs  techlib.rs  tir.rs  wir.rs
v2m/core/formats/tests/: roundtrip.rs  schema_lint.rs
v2m/core/formats/tests/snapshots/: roundtrip__constraints_roundtrip.snap  roundtrip__nir_roundtrip.snap  roundtrip__nir_roundtrip__counter.snap  roundtrip__nir_roundtrip__full_adder.snap  roundtrip__nir_roundtrip__minimal.snap  roundtrip__pir_roundtrip.snap  roundtrip__techlib_roundtrip.snap  roundtrip__tir_roundtrip.snap  roundtrip__wir_roundtrip.snap
v2m/core/nir/: Cargo.toml
v2m/core/nir/benches/: nir_perf.rs
v2m/core/nir/src/: lib.rs  lint.rs  normalize.rs  strash.rs  verilog.rs
v2m/core/nir/tests/: nir_golden.rs  normalize_const_cat.rs  normalize_ops.rs  pipeline_eval.rs  strash_props.rs  yosys_equivalence.rs
v2m/crates/tools-yosys/: Cargo.toml
v2m/crates/tools-yosys/src/: lib.rs  run.rs
v2m/crates/yosys-bridge/: Cargo.toml
v2m/crates/yosys-bridge/src/: bitref.rs  lib.rs  loader.rs  signal_table.rs
v2m/crates/yosys-bridge/tests/: loader.rs
v2m/crates/yosys-bridge/tests/fixtures/: full_adder.json  has_cmp.json  has_mem.json  missing_top.json
v2m/docs/: evaluator-v2.md
v2m/docs/benchmarks/: nir_perf_baseline.md
v2m/evaluator/: Cargo.toml
v2m/evaluator/benches/: alu32.rs
v2m/evaluator/src/: comb.rs  lib.rs  packed.rs  pin_binding.rs  ports.rs  profile.rs  reset.rs  runner.rs
v2m/examples/constraints/: minimal.json
v2m/examples/eval/: README.md  full_adder.expected.json
v2m/examples/nir/: counter.json  full_adder.json  minimal.json
v2m/examples/pir/: minimal.json
v2m/examples/techlib/: minimal.json
v2m/examples/tir/: minimal.json
v2m/examples/wir/: minimal.json
v2m/frontends/yosys_bridge/: Cargo.toml
v2m/frontends/yosys_bridge/src/: context.rs  lib.rs  module.rs  nir_node.rs
v2m/frontends/yosys_bridge/src/cells/: arith.rs  compare.rs  logic.rs  mod.rs  seq.rs
v2m/frontends/yosys_bridge/tests/: comparators.rs  nir_mapping.rs  seq.rs
v2m/frontends/yosys_bridge/tests/snapshots/: nir_mapping__alu4_sample.snap  nir_mapping__mux_tree_sample.snap
v2m/schemas/: .schema-hashes  constraints.schema.json  nir.schema.json  pir.schema.json  techlib.schema.json  tir.schema.json  wir.schema.json
v2m/tests/golden/nir/: alu4.nir.json  alu4@snap.json.snap  fa1.nir.json  fa1@snap.json.snap  reg1x8.nir.json  reg1x8@snap.json.snap
v2m/tools/: check-schema-hashes.sh
