[workspace]
members = [
    "core/formats",
    "core/nir"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
jsonschema = { version = "0.17", default-features = false, features = ["draft201909", "draft202012"] }
insta = { version = "1", features = ["json"], default-features = false }
walkdir = "2"
num-bigint = "0.4"
