[workspace]
members = [
    "core/formats",
    "core/nir",
    "evaluator",
    "cli"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
bincode = "1"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
jsonschema = { version = "0.17", default-features = false, features = ["draft201909", "draft202012"] }
insta = { version = "1", features = ["json"], default-features = false }
walkdir = "2"
num-bigint = "0.4"
sha2 = "0.10"
