[package]
name = "v2m-evaluator"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
v2m-formats = { path = "../core/formats" }
v2m-nir = { path = "../core/nir" }
thiserror = { workspace = true }
num-bigint = { workspace = true }
num-traits = "0.2"

[dev-dependencies]
rand = "0.8"
serde_json = { workspace = true }
