[package]
name = "v2m-nir"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
v2m-formats = { path = "../formats" }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
v2m-formats = { path = "../formats" }
insta = { workspace = true }
tempfile = "3"
