[package]
name = "v2m-nir"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
v2m-formats = { path = "../formats" }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
rustc-hash = "1.1"
smallvec = "1.11"

[dev-dependencies]
v2m-formats = { path = "../formats" }
insta = { workspace = true }
tempfile = "3"
v2m-evaluator = { path = "../../evaluator" }
proptest = "1"
rand = { workspace = true }
num-bigint = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "nir_perf"
harness = false
